# Prolucid_gui

./: Chymotrypsin_phosphorylation_peptide_level_FDR.prolucid_params  Prolucid_GUI.py  Readme.md  data_store.py  default_trypsin.prolucid_params  mike.py  mysql_example.py  peptide_cutter.py  run_prolucid.py  write_search_xml.py
src/: README.md  pyproject.toml
src/docs/: command_line.md  gui_functions.md
src/examples/: default_trypsin.prolucid_params  search.xml
src/src/prolucid_gui/: __init__.py  cli.py  config.py  gui.py  runner.py  xml_writer.py
