[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prolucid-gui"
version = "0.1.0"
description = "Python 3 rewrite of the ProLuCID GUI workflow"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Rewrite based on legacy project by Yu (Tom) Gao" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
